# sphere-simulation

./: .gitignore  .history  CMakeLists.txt  Makefile  Makefile.conf  README.md  axisorientationsensor.cpp  axisorientationsensor.h  conceptordep.cpp  conceptordep.h  dep.cpp  dep.h  main.cpp  matrixVizConf.xml  sphere.cpp  sphere.h  store1.conf
